# RoleDrop_Radar

./: .env.example  .gitignore  FDE_ARCHITECTURE.md  README.md  render.yaml  start-radar.bat
.github/workflows/: monitor.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260525_0001_initial.py
backend/app/: __init__.py  auth.py  cli.py  config.py  db.py  evaluate.py  main.py  models.py  schemas.py
backend/app/services/: intelligence.py  monitor.py  notifications.py  resume.py  sources.py
backend/tests/: conftest.py  test_matching.py  test_monitor_flow.py  test_profile_and_security.py  test_sources.py
evaluation/: labeled_jobs.json
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/lib/: api.ts  supabase.ts
supabase/migrations/: 202605250002_row_level_security.sql
