[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "roledrop-radar-backend"
version = "0.1.0"
description = "Resume-matched early job alert platform API and monitor"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0",
  "uvicorn[standard]>=0.30.0,<1.0",
  "sqlalchemy>=2.0.36,<3.0",
  "alembic>=1.14.0,<2.0",
  "pydantic-settings>=2.7.0,<3.0",
  "python-multipart>=0.0.18,<1.0",
  "pypdf>=5.1.0,<7.0",
  "httpx>=0.27.2,<1.0",
  "beautifulsoup4>=4.12.3,<5.0",
  "psycopg[binary]>=3.2.3,<4.0",
]

[project.optional-dependencies]
test = ["pytest>=8.3.4,<9.0", "pytest-asyncio>=0.24.0,<1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

